fix ios flexbox problem and some layout problems

--- a/src/styles/home/profile.module.css
+++ b/src/styles/home/profile.module.css
@@ -1,12 +1,3 @@
 .image {
   text-align: center;
 }
-
-.link {
-  color: royalblue;
-  text-decoration: none;
-}
-
-.link:hover {
-  color: darkblue;
-}
